--- a/MunchkinCounter/pom.xml
+++ b/MunchkinCounter/pom.xml
@@ -19,7 +19,9 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.basedir}/lib</outputDirectory>
+							<outputDirectory>${project.basedir}/libs</outputDirectory>
+							<includeArtifactIds>MunchkinPresenter</includeArtifactIds>
+							<includeGroupIds>com.slinkman.munchkin</includeGroupIds>
 						</configuration>
 					</execution>
 				</executions>
