--- a/MunchkinCounter/AndroidManifest.xml
+++ b/MunchkinCounter/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.slinkman.munchkin"
-      android:versionName="1.1.2" android:versionCode="4">
+      android:versionName="1.2" android:versionCode="5">
     <application android:label="@string/app_name" android:debuggable="false" android:icon="@drawable/munchkinlogo">
         <activity android:name=".activity.Counter"
                   android:label="@string/app_name">
@@ -13,7 +13,7 @@
 
     
 <activity android:name=".activity.Power"></activity>
-<activity android:name=".activity.Dice"></activity>
+<activity android:name=".activity.Dice" android:screenOrientation="portrait"></activity>
 <activity android:name=".activity.Settings"></activity>
 <activity android:name=".activity.Gear"></activity>
 </application>
