--- a/MunchkinCounter/AndroidManifest.xml
+++ b/MunchkinCounter/AndroidManifest.xml
@@ -19,6 +19,9 @@
 </application>
     <uses-sdk android:minSdkVersion="7" />
 
+<uses-library android:name="libGoogleAnalytics.jar" />
 <uses-library android:name="MunchkinPresenter-1.0-SNAPSHOT.jar" />
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+<uses-permission android:name="android.permission.INTERNET" /> 
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest> 
