--- a/MunchkinPresenter/pom.xml
+++ b/MunchkinPresenter/pom.xml
@@ -57,5 +57,12 @@
       <version>4.4</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.mod4j.org.apache.commons</groupId>
+    	<artifactId>lang</artifactId>
+    	<version>2.1.0</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
