--- a/MunchkinAndroid/AndroidManifest.xml
+++ b/MunchkinAndroid/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.slinkman.munchkin.android"
-	android:versionCode="1"
-	android:versionName="2.0-SNAPSHOT">
+	package="com.slinkman.munchkin"
+	android:versionCode="10"
+	android:versionName="2.0">
 	<uses-sdk
-		android:targetSdkVersion="11"
+		android:targetSdkVersion="9"
 		android:minSdkVersion="7"></uses-sdk>
 
 	<application
 		android:icon="@drawable/icon"
 		android:label="@string/app_name">
 		<activity
-			android:name=".AbstractActivity" android:theme="@android:style/Theme.NoTitleBar">
+			android:name=".android.AbstractActivity" android:theme="@android:style/Theme.NoTitleBar">
 			<intent-filter>
 				<action
 					android:name="android.intent.action.MAIN" />
